COntinued fixing all spacing issues within Generic Product Page to make all elements evenly spaced out.Split up Contact Us page into two new pages for better user experience - created first page of the two, Request Form. Imported a photo and created a form for users to leave generic messages.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -261,8 +261,9 @@ hr {
 }
 
 /*Styling order confirmation page*/
-h1.center {
+.h1-Center {
     text-align: center;
+    font-weight: bolder;
 }
 
 h2.left {
@@ -678,10 +679,12 @@ input.btpos {
 
 /*creates spacing between both columsn of information on the generic product page*/
 .GenProduct_VerticalSpacer{
-  margin-left: 50px;
+  margin-left: 30px;
 }
 
-
+.GenProduct_HeadingSpacer{
+    margin-bottom: 20px;
+}
 
 /* creates styling for Mission Statement on About Page*/
 
